src/styles/_mixins.scss
@mixin floating-avatar {
  display: block;
  height: 0;

  .avatar {
    float: left;
    height: $avatar-size;
    margin-left: -$avatar-size - $block-inner-padding * 2;
    margin-top: -$avatar-size / 2;
    width: $avatar-size;
  }

  @media screen and (max-width: $screen-breakpoint-medium) {
    height: auto;

    .avatar {
      float: none;
      height: $icon-size;
      margin-left: 0;
      margin-right: $icon-size / 2;
      margin-top: 0;
      width: $icon-size;
    }
  }
}

@mixin post-action {
  display: flex;
  font-weight: bold;
  margin: 0 $block-outer-padding $block-outer-padding / 2;

  img {
    filter: $text-colorizer;
    height: $icon-size;
    margin-right: $icon-size / 2;
    min-width: $icon-size;
    object-fit: contain;
    vertical-align: middle;
    width: $icon-size;
  }
}

@mixin post-icon {
  .icon {
    align-items: center;
    color: $secondary-text-color;
    display: flex;
    gap: 0.25em;
    margin-right: $icon-size / 2;

    img {
      filter: $secondary-text-colorizer;
      height: $icon-size;
      min-width: $icon-size;
      object-fit: contain;
      vertical-align: middle;
      width: $icon-size;
    }

    &:hover,
    &.highlighted {
      color: $secondary-text-hover-color;

      img {
        filter: $secondary-text-hover-colorizer;
      }
    }

    &:last-child {
      margin-right: 0;
    }
  }

  .icon-small img {
    $icon-size-small: $icon-size * 0.8;

    height: $icon-size-small;
    min-width: $icon-size-small;
    width: $icon-size-small;
  }
}

@mixin block-btn {
  .btn {
    background-color: $btn-background-hover-color;
    border: 1px solid transparent;
    color: $btn-text-hover-color;

    &:hover {
      background-color: transparent;
      border: 1px solid $btn-text-color;
      color: $btn-text-color;
    }
  }
}

